# quartermaster

./: .dockerignore  .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FEATURES.md  LICENSE  Makefile  README.md  RUNNING.md  SECURITY.md  docker-compose.yml  example.env  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: CLAUDE.md  settings.json
.claude/agents/: implementer.md  planner.md  reviewer.md
.claude/hooks/: guard.py
.claude/skills/implement-ticket/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
prompts/: implementer.md  planner.md  reviewer.md
prompts/schemas/: implement.json  plan.json  review.json
quartermaster/: __init__.py  audit.py  budget.py  claude_mock.py  claude_runner.py  config.py  dashboard.html  dashboard.py  evals.py  logging_setup.py  main.py  models.py  notify.py  observability.py  pipeline.py  poller.py  queue.py  repomap.py  scanner.py  seed.py  session.py  setup.html  worker.py  worktree.py
quartermaster/broker/: __init__.py  broker.py  factory.py  policy.py
quartermaster/broker/connectors/: base.py  github.py  jira.py  mock.py
tests/: conftest.py  test_broker_policy.py  test_budget.py  test_dashboard.py  test_evals.py  test_guard_hook.py  test_models.py  test_observability.py  test_pipeline.py  test_queue.py  test_scanner.py
